# MAnormFast

./: .gitignore  AGENTS.md  INSTALLATION_GUIDE.md  MANIFEST.in  PIP_INSTALLATION_SUMMARY.md  PYTHON_3.10_OPTIMIZATION_SUMMARY.md  PYTHON_310_COMPATIBILITY_SUMMARY.md  README.md  README.txt  install  pyproject.toml  requirements.txt  setup.py  test_MAnorm.py  test_python310_compatibility.py
MAnormFast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Manual/: MAnorm_manual.html
docs/: optimization_proposals.md
lib/: MAnormFast.py  MAnorm_io.py  __init__.py  cli.py  peaks.py
test/: 1-peaks_MAvalues.xls  2-peaks_MAvalues.xls  test_all_peak_MAvalues.xls
test/output_filters/: M_less_-1.00_biased_peaks_of_all_peaks.bed  M_over_1.00_biased_peaks_of_all_peaks.bed  unbiased_peaks_of_all_peaks.bed
test/output_wig_files/: test_peaks_Mvalues.wig  test_peaks_Pvalues.wig
tests/: conftest.py  test_integration.py  test_io.py  test_peaks.py
tests/data/: sample_peaks1.bed  sample_peaks2.bed  sample_reads1.bed  sample_reads2.bed
