[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAnormFast"
version = "0.1.0"
description = "MAnorm Fast - A robust model for quantitative comparison of ChIP-Seq data sets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Semal", email = "gzhsss2@gmail.com"},
]
keywords = ["bioinformatics", "ChIP-Seq", "genomics", "peak analysis", "normalization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/semal/MAnormFast"
"Bug Reports" = "https://github.com/semal/MAnormFast/issues"
"Source" = "https://github.com/semal/MAnormFast"
"Documentation" = "https://github.com/semal/MAnormFast/blob/main/README.md"

[project.scripts]
MAnormFast = "MAnormFast.MAnormFast:command"

[tool.setuptools.packages.find]
where = ["."]
include = ["MAnormFast*"]

[tool.setuptools.package-dir]
MAnormFast = "lib"